# easy-wallpaper

./: LICENSE  README.md  gen.py  pyproject.toml
